--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,16 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
 html,
 body {
   width: 100%;
   height: 100%;
+  background-image: url(https://i.pinimg.com/236x/da/f7/9a/daf79a481bad7c8a0004060d0e816c3c.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 #main {
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 20px;
-    background-color: lightblue;
-    text-align: center;
+    /* margin: auto; */
+    /* margin-top: 100px; */
+    /* border-radius: 20px; */
+    /* background-color: rgb(135, 138, 139); */
+    text-align:left;
     width: 100%;
     height: 100%;
+    font-size: 24px;
+    font-family: 'Noto Sans KR', sans-serif;
   }
   .modal {
     display: none;
@@ -31,9 +37,17 @@ body {
     width: 400px;
     height: 400px;
     top: 50%;
+    text-align: center;
   }
   #messageInputArea {
-    display: none;
+        padding: 4px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        box-sizing: border-box;
+        text-align: center;
   }
   input {
     margin: 20px;
@@ -43,14 +57,28 @@ body {
   button {
     border-radius: 10px;
     border: 1px solid black;
-    width: 100px;
+    width: 80px;
     height: 50px;
   }
   #messageInput {
-    width: 500px;
+    width: 800px;
+    height: 50px;
     text-align: center;
+    border-radius: 50px;
+    border: none;
+  }
+  #header{
+    display: inline-block;
+    transition: 1s linear;
   }
   #header:hover {
     color: gold;
+    transform: rotate(360deg);
+  }
+  #message > li {
+    padding: 5px 10px;
+  }
+  #message > li:nth-child(odd) {
+    background-color: #efefef;
   }
   
