--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
 html,
 body {
   width: 100%;
   height: 100%;
-  background-image: url(https://i.pinimg.com/236x/da/f7/9a/daf79a481bad7c8a0004060d0e816c3c.jpg);
+  background-image: url(../img/자연1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  
 }
-#main {
+#main, h2{
     /* margin: auto; */
     /* margin-top: 100px; */
     /* border-radius: 20px; */
@@ -15,8 +16,8 @@ body {
     text-align:left;
     width: 100%;
     height: 100%;
-    font-size: 24px;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 36px;
+    font-family: 'Gamja Flower', cursive;
   }
   .modal {
     display: none;
@@ -53,12 +54,14 @@ body {
     margin: 20px;
     border: none;
     border-bottom: 1px solid black;
+    font-family: 'Gamja Flower', cursive;
   }
   button {
     border-radius: 10px;
     border: 1px solid black;
     width: 80px;
     height: 50px;
+    font-family: 'Gamja Flower', cursive;
   }
   #messageInput {
     width: 800px;
@@ -74,4 +77,10 @@ body {
   #header:hover {
     color: gold;
     transform: rotate(360deg);
+  }
+  #chat {
+    display: none;
+    margin: 20px;
+    width: 100%;
+    height: 100%;
   }
